# RevSight

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  cloudbuild.yaml  docker-compose.yml  frontend-skill.md  mockups.html  mockups2.html  mockups3.html  mockups4.html  mockups5.html  mockups6.html  mockups7.html  mockups8.html  mockups9.html  mockups_final.html  mockups_vfinal.html
.github/workflows/: deploy.yml
backend/: Dockerfile  cleanup_runs.py  pyproject.toml  reseed_apac.py  test_agent_direct.py  test_backend.py  test_gemini.py  test_quick.py  test_stream.py  test_stream_debug.py  test_two.py  verify_db.py
backend/app/: config.py  main.py  mcp_server.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: governance.py  ingestion.py  metrics.py  narrative.py  risk.py
backend/app/agents/schemas/: metrics.py  report.py  request.py
backend/app/agents/tools/: metric_tools.py  sql_tools.py
backend/app/api/routes/: a2a.py  imports.py  metrics.py  reports.py  runs.py  stream.py
backend/app/core/: audit.py  guardrails.py  model.py
backend/app/db/: connection.py  seed.py
backend/app/db/migrations/: 001_init.sql
backend/app/db/queries/: aging.sql  conversion.sql  coverage.sql  slippage.sql  velocity.sql
backend/tests/eval/: test_scenarios.py
backend/tests/unit/: test_guardrails.py
docs/: architecture.md  framework-evaluation.md  governance.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontendOld/: Dockerfile
(+23 files in other folders)
